[gd_scene load_steps=4 format=3 uid="uid://bqi27k1p5vym0"]

[ext_resource type="Script" uid="uid://d11vbrmgbjwvk" path="res://cenas/quiz_box.gd" id="1_ff1un"]
[ext_resource type="Texture2D" uid="uid://bmirqugr2io6a" path="res://assets/Dialog_Box(16 x 16).png" id="2_x5lre"]
[ext_resource type="FontFile" uid="uid://cewuk8as3g360" path="res://assets/RevMiniPixel.ttf" id="3_jw34a"]

[node name="quiz_box" type="MarginContainer"]
offset_right = 55.0
offset_bottom = 18.0
script = ExtResource("1_ff1un")

[node name="letter_timer_display" type="Timer" parent="."]
one_shot = true

[node name="background" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_x5lre")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="label_margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="text_label" type="Label" parent="label_margin"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jw34a")
theme_override_font_sizes/font_size = 16
vertical_alignment = 1

[node name="button_margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="GridContainer" type="GridContainer" parent="button_margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Botao1" type="Button" parent="button_margin/GridContainer"]
layout_mode = 2
autowrap_mode = 2

[node name="Botao2" type="Button" parent="button_margin/GridContainer"]
layout_mode = 2
autowrap_mode = 2

[node name="Botao3" type="Button" parent="button_margin/GridContainer"]
layout_mode = 2
autowrap_mode = 2

[node name="Botao4" type="Button" parent="button_margin/GridContainer"]
layout_mode = 2
autowrap_mode = 2

[connection signal="timeout" from="letter_timer_display" to="." method="_on_letter_timer_display_timeout"]
