extends MarginContainer

@onready var text_label: Label = $label_margin/text_label
@onready var letter_timer_display: Timer = $letter_timer_display
@onready var botao_1: Button = $button_margin/GridContainer/Botao1
@onready var botao_2: Button = $button_margin/GridContainer/Botao2
@onready var botao_3: Button = $button_margin/GridContainer/Botao3
@onready var botao_4: Button = $button_margin/GridContainer/Botao4
